tests/core/unreachable.sy
start :: fn do
    <!>
end
// error: #Unreachable
